--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dat.gui": "^0.6.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
+    "pixi-filters": "^1.0.6",
     "pixi.js": "^4.3.4"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.6",
+    "browser-sync-webpack-plugin": "^1.1.3",
     "browserify-versionify": "^1.0.6",
     "ify-loader": "^1.0.3",
     "json-loader": "^0.5.4",
